# rustwasmsystemd

./: .gitignore  Cargo.toml  README.md
add_lib1/: Cargo.toml
add_lib1/src/: lib.rs
adder/: Cargo.toml
adder/src/: main.rs
debian/: rustwasm.service
debian/scripts/: postinst  postrm  prerm
src/: main.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.common.js  webpack.dev.js
