[package]
name = "systemd-rust-ianaio"
version = "0.1.0"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
edition = "2021"
homepage = "https://github.com/ianaio/systemd-rust-ianaio#readme"
keywords = ["ianaio","systems", "systemd", "rust", "debian"]
repository = "https://github.com/ianaio/systemd-rust-ianaio"
readme = "README.md"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "System for systemd rust from debian"
section = "admin"
priority = "optional"
assets = [
    ["target/release/systemd-rust-ianaio", "usr/bin/rust", "755"],
    ["debian/rust.service", "/lib/systemd/system/rust.service", "644"],
]
maintainer-scripts = "debian/scripts"

[dependencies]
cargo-deb = "1.43.0"
rocket = "0.4.10"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.

# wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

