[package]
name = "adder"
version = "0.1.0"
edition = "2021"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
homepage = "https://github.com/ianaio/rustwasmsystemd#readme"
keywords = ["iana","systems", "systemd", "rust-wasm", "workspaces", "debian"]
repository = "https://github.com/ianaio/rustwasmsystemd"
license = "LICENSE.md"
description = "IANA SYSTEMS - systemd - workspaces - binary - package"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
add_lib1 = { path = "../add_lib1" }
rand = "0.8.5"
wasm-bindgen = "0.2.84"
cargo-deb = "1.43.0"
rocket = "0.4.10"

